--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,21 @@ services:
       - "8000:8000"
     volumes:
       - ./service:/service
+    environment:
+      - DB_HOST=database
+      - DB_NAME=pomidor_db
+      - DB_USER=admin
+      - DB_PASS=admin
 
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+
+    depends_on:
+      - database
+
+  database:
+    image: postgres:15.1-alpine
+    environment:
+      - POSTGRES_DB=pomidor_db
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
